--- a/Expoandes/app/src/main/res/drawable/splash_screen.xml
+++ b/Expoandes/app/src/main/res/drawable/splash_screen.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/white"/>
     <item>
-        <bitmap android:src="@mipmap/logo_u"
+        <bitmap android:src="@mipmap/splash_screen_icono"
 
             android:gravity="center"/>
     </item>
