Ya funciona normal el login, ya está bien conectado con firebase. Lo que por ahora falta es averiguar como crear un nuevo elemento de layout cada que se presiona el boton para que se puedan añadir tantos elementos como queramos sin problemas. Por ahora voy a comenzar con la creación de la pantalla de agregar algo que estará en el perfil.

--- a/Expoandes/app/src/main/res/layout/fragment_home.xml
+++ b/Expoandes/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.home.HomeFragment">
 
     <Button
-        android:id="@+id/boton_prueba"
+        android:id="@+id/logOutBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="159dp"
