--- a/Expoandes/app/src/main/res/layout/fragment_home.xml
+++ b/Expoandes/app/src/main/res/layout/fragment_home.xml
@@ -7,6 +7,7 @@
     tools:context=".ui.home.HomeFragment">
 
     <Button
+        android:background="@drawable/rounded_button"
         android:id="@+id/logOutBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
