--- a/Expoandes/app/src/main/res/navigation/mobile_navigation.xml
+++ b/Expoandes/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,9 +13,9 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.example.expoandes.ui.dashboard.DashboardFragment"
+        android:name="com.example.expoandes.ui.Perfil.PerfilFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_perfil" />
 
     <fragment
         android:id="@+id/navigation_notifications"
