--- a/Expoandes/app/src/main/res/values/themes.xml
+++ b/Expoandes/app/src/main/res/values/themes.xml
@@ -17,4 +17,11 @@
     <style name="SplashTheme" parent="Theme.Expoandes">
         <item name="android:windowBackground">@drawable/splash_screen</item>
     </style>
+
+    <style name="Theme.Expoandes.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+
 </resources>
