--- a/Expoandes/app/src/main/res/values/colors.xml
+++ b/Expoandes/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="brown">#B59F96</color>
+    <color name="azulito">#2296F3</color>
 </resources>
