--- a/Expoandes/app/src/main/res/layout/activity_cosas_propias_view.xml
+++ b/Expoandes/app/src/main/res/layout/activity_cosas_propias_view.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:background="#E4E5E6">
+    android:background="#E4E5E6"
+    tools:context=".CosasPropiasView">
     <androidx.constraintlayout.widget.ConstraintLayout
 
         android:layout_width="match_parent"
@@ -14,10 +15,10 @@
 
 
         <LinearLayout
-        android:id="@+id/layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+            android:id="@+id/cosas_propias_full"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
         </LinearLayout>
 
