--- a/Expoandes/app/src/main/res/layout/activity_info_confirmar.xml
+++ b/Expoandes/app/src/main/res/layout/activity_info_confirmar.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="400dp"
         android:layout_marginTop="265dp"
         android:layout_marginBottom="266dp"
         android:orientation="vertical"
@@ -40,7 +40,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="50sp"
+            android:layout_marginTop="40dp"
+            android:gravity="center_horizontal"
+            android:text="TextView" />
+
+        <TextView
+            android:id="@+id/txtPrecio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="40dp"
             android:gravity="center_horizontal"
             android:text="TextView" />
 
@@ -49,7 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="90dp"
             android:text="Prestar" />
     </LinearLayout>
 
