--- a/Expoandes/app/src/main/res/layout/activity_devolver.xml
+++ b/Expoandes/app/src/main/res/layout/activity_devolver.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/info_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".DevolverActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -59,7 +59,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="90dp"
-            android:text="Prestar" />
+            android:text="Devolver" />
     </LinearLayout>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
