--- a/Expoandes/app/src/main/res/layout/activity_auth.xml
+++ b/Expoandes/app/src/main/res/layout/activity_auth.xml
@@ -59,23 +59,24 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/signUpBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="Registrar" />
-
-            <Space
-                android:layout_width="20dp"
-                android:layout_height="match_parent" />
-
-            <Button
                 android:id="@+id/loginBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="Acceder" />
+
         </LinearLayout>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="30dp" />
+
+        <Button
+            android:id="@+id/signUpBtn"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="Regístrate" />
 
     </LinearLayout>
 
