--- a/Expoandes/app/src/main/res/layout/activity_info_confirmar.xml
+++ b/Expoandes/app/src/main/res/layout/activity_info_confirmar.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/texto_nombre_dev"
+            android:id="@+id/texto_nombre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -27,7 +27,7 @@
             android:text="TextView" />
 
         <TextView
-            android:id="@+id/text_owner_dev"
+            android:id="@+id/text_owner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -36,7 +36,7 @@
             android:text="TextView" />
 
         <TextView
-            android:id="@+id/txtDescripcion_dev"
+            android:id="@+id/txtDescripcion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -45,7 +45,7 @@
             android:text="TextView" />
 
         <TextView
-            android:id="@+id/txtPrecio_dev"
+            android:id="@+id/txtPrecio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -54,7 +54,7 @@
             android:text="TextView" />
 
         <Button
-            android:id="@+id/DevolverBtn_dev"
+            android:id="@+id/DevolverBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
